# Gravity3D

./: .clang-format  CMakeLists.txt  Gravity3D.html  LICENSE  README.md  data.cpp  data.h  data_serialization.h  init.cpp  init.h  interaction.cpp  interaction.h  main.cpp  normalize.cpp  normalize.h  qqq.html  render.cpp  render.h  simulation.cpp  simulation.h  viewData.cpp  viewData.h
docs/: plan.md  tasks.md
